[package]
name = "swipl-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library to interact with SWI-Prolog's Machine Query Interface (MQI)"
license = "BSD-2-Clause"
authors = ["Younes A <git@younes.io>"]
repository = "https://github.com/SWI-Prolog/packages-mqi"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
log = "0.4" # For logging Prolog output and internal library messages
nix = { version = "0.29", features = ["socket", "uio", "fs"], optional = true } # For Unix Domain Sockets

[features]
default = []
unix-socket = ["dep:nix"] 
